--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="bg">
     <h1>Rock-Paper-Scissors Tool</h1>
     <p>Click below to play rock-paper-scissors!</p>
-    <button>Start</button>
+    <button id="start">Start</button>
     <p></p>
     </div>
     <script src="script.js"></script>
