minor style changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="bg">
+    <div class="bg, well">
       <h1>Rock-Paper-Scissors</h1>
       <p>Click below to play rock-paper-scissors! The game ends in 5 rounds:</p>
       <button id="start">Start</button>
@@ -22,7 +22,6 @@
       <div id="ai-choice"></div>
       <div id="score"></div>
       <div id="results"></div>
-    </div>
-    
+    </div> 
   </body>
 </html>
