--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div id="ai-choice"></div>
       <div id="score"></div>
       <div id="results"></div>
+      <!-- testing -->
     </div> 
   </body>
 </html>
